<resources>
    <string name="app_name">CoffeeBalanceProject</string>
    <string name="title_main">Who Goes There?</string>
    <string name="title_loan">Welcome Loan</string>
    <string name="title_george">Welcome George</string>
    <string name="name_loan">Loan</string>
    <string name="name_george">George</string>
    <string name="text_coffeeSelectionHd">Which Coffee?</string>
    <string name="text_coffeeSelectionChp">Cheap</string>
    <string name="text_coffeeSelectionExp">Expensive</string>
</resources>
